[package]
name = "formdata"
version = "0.9.0"
description = "Parsing of multipart/form-data"
authors = [ "Mike Dilger <mike@optcomp.nz>" ]
readme = "README.md"
repository = "https://github.com/mikedilger/formdata"
documentation = "https://mikedilger.github.io/formdata"
license = "MIT"
keywords = ["multipart", "form-data", "hyper", "http", "mime"]

[features]
default = [ "ssl" ]
ssl = ["hyper/ssl"]

[dependencies]
hyper = { version = "0.9", default-features = false }
httparse = "1.1"
mime = "0.2"
tempdir = "0.3"
textnonce = "0.4"
log = "0.3"
encoding = "0.2"
clippy = { version = "0.0", optional = true }
mime_multipart = "0.2"
