[package]
name = "formdata"
version = "0.13.0"
description = "Parsing of multipart/form-data"
authors = [ "Mike Dilger <mike@optcomp.nz>" ]
readme = "README.md"
repository = "https://github.com/mikedilger/formdata"
documentation = "https://mikedilger.github.io/formdata"
license = "MIT"
keywords = ["multipart", "form-data", "hyper", "http", "mime"]

[dev-dependencies]
tempdir = "0.3"

[dependencies]
hyper = { version = "0.10" }
httparse = "1.2"
mime = "0.2"
textnonce = "1.0"
log = "0.4"
encoding = "0.2"
clippy = { version = "0.0", optional = true }
mime_multipart = "0.6"
